# EtsyImageStudio

./: .gitignore  .renderignore  .replit  AI_CONTENT_POLICY.md  AUTH_WORKFLOW_GUIDE.md  AUTO_ADVANCE_WORKFLOW.md  BACKGROUND_REMOVAL_FEATURE.md  BLOG_API_GUIDE.md  BLOG_CONTENT_STRATEGY_25_TOPICS.md  BLOG_MANAGEMENT_SUMMARY.md  BLOG_MIGRATION_GUIDE.md  BLOG_POSTS_READY.md  BUSINESS_DIRECTORIES_SUBMISSION_PLAN.md  CONTENT_STRATEGY_SUMMARY.md  COORDINATE_PLACEMENT_GUIDE.md  DEPLOYMENT_FIX_GUIDE.md  ETSY_APP_NAME_OPTIONS.md  ETSY_COMPLIANCE_SUMMARY.md  ETSY_INTEGRATION_GUIDE.md  ETSY_REGISTRATION_CHECKLIST.md  FASTAPI_IMPLEMENTATION.md  FINAL_PRODUCTION_DEBUG.md  INDEXNOW_SETUP.md  INTEGRATION_EXAMPLES.md  MAKE_PINTEREST_SETUP.md  MARKETING_AUTOMATION_GUIDE.md  MEMORY_FIXES_IMPLEMENTED.md  MEMORY_OPTIMIZATION_PLAN.md  MIGRATION_GUIDE.md  MOCKUP_PERFORMANCE_FIX.md  PASSWORD_RESET_FEATURE.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION.md  PINTEREST_AUTOMATION_GUIDE.md  PINTEREST_BOARD_IDS.md  PRODUCTION_AUTH_FIX.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_FIX_SUMMARY.md  PSD_MOCKUP_SYSTEM.md  QUICK_API_EXAMPLES.md  (+76 more)
api/: index.js
attached_assets/: Pasted--Auth-Debug-Object-index-BSq6hLKk-js-289-All-Plans-Data-undefined-index-BSq6hLKk-js-289-Cr-1754395569071_1754395569071.txt  Pasted--Auth-Debug-Object-index-D6stOgza-js-48-PRODUCTION-TOKEN-DEBUG-Object-index-D6stOgza-js-48--1754403386546_1754403386547.txt  Pasted--Auth-Debug-isAuthenticated-false-hasUser-false-currentPath-index-C4qhEJND-js-380-Goog-1755956463371_1755956463371.txt  (+76 more)
client/: index.html
(+225 files in other folders)
